[gd_scene load_steps=16 format=4 uid="uid://q66dwd10v15l"]

[ext_resource type="Script" uid="uid://d4joakp74nxnn" path="res://Objects/Gameplay/HandFunctions/hand_grab.gd" id="1_atu7c"]
[ext_resource type="Script" uid="uid://wg1ywt01atfp" path="res://Objects/Gameplay/Note/note.gd" id="1_loagb"]
[ext_resource type="Script" uid="uid://cp2nj828ny1um" path="res://Objects/Gameplay/HandFunctions/interaction.gd" id="2_avi20"]
[ext_resource type="Texture2D" uid="uid://5bv6u5em4vaq" path="res://Objects/Gameplay/Note/Model/T_OfficeCardboardBoxes_A_N.png" id="3_atu7c"]
[ext_resource type="Texture2D" uid="uid://b6x16kw6x43oj" path="res://Objects/Gameplay/Note/Model/T_OfficeCardboardBoxes_A_BC.png" id="3_avi20"]
[ext_resource type="PackedScene" uid="uid://b6d8fh6o30302" path="res://Objects/Gameplay/interaction_indicator.tscn" id="4_33e72"]
[ext_resource type="Texture2D" uid="uid://80k8vprllogc" path="res://Objects/Gameplay/Note/Model/T_OfficeCardboardBoxes_A_ORM.png" id="4_avi20"]
[ext_resource type="Material" uid="uid://boniyrbf4188m" path="res://Objects/VFX/Item/item_outline.tres" id="4_s3npb"]
[ext_resource type="Script" uid="uid://f1ql8nf8705p" path="res://Objects/Gameplay/HandFunctions/inventory_item.gd" id="8_tu1e2"]
[ext_resource type="Texture2D" uid="uid://bexd34uonvk80" path="res://Interface/Inventory/ItemIcons/note_inv.png" id="10_33e72"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s3npb"]
size = Vector3(0.379883, 0.15918, 0.479492)

[sub_resource type="BoxShape3D" id="BoxShape3D_loagb"]
size = Vector3(0.269531, 0.0725098, 0.349854)

[sub_resource type="ArrayMesh" id="ArrayMesh_4nn3f"]
_surfaces = [{
"aabb": AABB(-0.149144, 0.00023114, -0.195448, 0.286667, 0.00804672, 0.378432),
"format": 34900799489,
"index_count": 15,
"index_data": PackedByteArray("AAABAAIAAgADAAAAAgAEAAMAAwAEAAUAAgAGAAQA"),
"name": "MI_OfficeCardboardBoxes_A",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 7,
"vertex_data": PackedByteArray("//8AAPrxAAA6Ei4K//8AAFAJdg59iQAA3O52LlQOAAAurNXHtwMAALrt//8AAAAAAAC3O8sNAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_tu1e2"]
resource_name = "paper_note_SM_OfficePapers_D"
_surfaces = [{
"aabb": AABB(-0.149144, 0.00023114, -0.195448, 0.286667, 0.00804672, 0.378432),
"attribute_data": PackedByteArray("AAAA//cxvx4YBNcHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/z9NLx6fuRgEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/z9NJzCfua97AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA//cxP0EYBF/tAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/385P0MnNr/6AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA//cxb0MYBN/7AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/z9N30KfuR/4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"),
"format": 34900799999,
"index_count": 15,
"index_data": PackedByteArray("AAABAAIAAgADAAAAAgAEAAMAAwAEAAUAAgAGAAQA"),
"name": "MI_OfficeCardboardBoxes_A",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 7,
"vertex_data": PackedByteArray("//8AAPrxdP46Ei4K//91/lAJdg59iXL+3O52LlQO6f4urNXHtwMv/7rt//8AAFz+AAC3O8sNvv3sgei+6oHpvuqBqb4tglC6doIpvIuBcLU2gQi/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_4nn3f")

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_0xd4b"]
next_pass = ExtResource("4_s3npb")
cull_mode = 2
albedo_texture = ExtResource("3_avi20")
orm_texture = ExtResource("4_avi20")
normal_enabled = true
normal_texture = ExtResource("3_atu7c")

[node name="NoteDefault" type="Node3D"]
script = ExtResource("1_loagb")

[node name="HandGrab" type="Area3D" parent="." node_paths=PackedStringArray("grab_marker")]
script = ExtResource("1_atu7c")
grab_animation = "straight"
grab_marker = NodePath("HandPositionMarker")
metadata/_custom_type_script = "uid://d4joakp74nxnn"

[node name="HandPositionMarker" type="Marker3D" parent="HandGrab"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.0170487, 0.1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HandGrab"]
shape = SubResource("BoxShape3D_s3npb")

[node name="BasicInteraction" type="Area3D" parent="."]
script = ExtResource("2_avi20")
metadata/_custom_type_script = "uid://cp2nj828ny1um"

[node name="CollisionShape3D" type="CollisionShape3D" parent="BasicInteraction"]
shape = SubResource("BoxShape3D_loagb")

[node name="InteractionIndicator" parent="BasicInteraction" instance=ExtResource("4_33e72")]

[node name="SM_OfficePapers_D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0)
mesh = SubResource("ArrayMesh_tu1e2")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ORMMaterial3D_0xd4b")

[node name="InventoryItem" type="Node" parent="."]
script = ExtResource("8_tu1e2")
item_type = 2
item_has_description = true
item_image = ExtResource("10_33e72")
metadata/_custom_type_script = "uid://f1ql8nf8705p"

[connection signal="let_go" from="HandGrab" to="." method="grabbed"]
[connection signal="player_interacted" from="BasicInteraction" to="." method="interacted"]
